<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Android 系统必需：应用名称 -->
    <string name="app_name">简易计算器</string>
    <string name="floating_menu_upload">Upload</string>
    <string name="floating_menu_layout_inspector">Layout Inspector</string>
    <string name="floating_menu_adapt_device_resolution">Adapt device resolution</string>
    <string name="floating_menu_reconnect">Reconnect</string>
    <string name="floating_menu_stay_awake">Disable stay awake</string>
    <string name="floating_menu_back_to_app">Back to app</string>
    <string name="floating_menu_rotate_target">Rotate target device</string>
    <string name="floating_menu_back">Back</string>
    <string name="floating_menu_home">Home</string>
    <string name="floating_menu_recents">Recents</string>
    <string name="floating_menu_lock_screen">Lock screen</string>
    <string name="floating_menu_pattern_lock">Pattern lock</string>
    <string name="floating_menu_keyboard">Keyboard</string>
    <string name="floating_menu_options">Options</string>
    <string name="floating_menu_disconnect">Disconnect</string>
</resources>
