<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/floating_menu_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingStart="7dp"
    android:paddingTop="0.5dp"
    android:paddingEnd="7dp"
    android:paddingBottom="0.5dp">

    <LinearLayout
        android:id="@+id/layout_more_actions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-4dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="gone">

        <ImageButton
            android:id="@+id/btn_rotate_target"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/floating_menu_rotate_target"
            android:paddingStart="7dp"
            android:paddingTop="9dp"
            android:paddingEnd="7dp"
            android:paddingBottom="5dp"
            android:rotation="90"
            android:scaleType="centerInside"
            android:src="@drawable/ic_toolbar_refresh" />

        <ImageButton
            android:id="@+id/btn_upload"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_marginStart="3dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/floating_menu_upload"
            android:paddingStart="5dp"
            android:paddingTop="7dp"
            android:paddingEnd="5dp"
            android:paddingBottom="3dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_toolbar_share" />

        <ImageButton
            android:id="@+id/btn_layout_inspector"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_marginStart="3dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/floating_menu_layout_inspector"
            android:paddingStart="5dp"
            android:paddingTop="7dp"
            android:paddingEnd="5dp"
            android:paddingBottom="3dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_toolbar_ui" />

        <ImageButton
            android:id="@+id/btn_adapt_resolution"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_marginStart="3dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/floating_menu_adapt_device_resolution"
            android:paddingStart="5dp"
            android:paddingTop="7dp"
            android:paddingEnd="5dp"
            android:paddingBottom="3dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_toolbar_resolution" />

        <ImageButton
            android:id="@+id/btn_reconnect"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_marginStart="3dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/floating_menu_reconnect"
            android:paddingStart="5dp"
            android:paddingTop="7dp"
            android:paddingEnd="5dp"
            android:paddingBottom="3dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_toolbar_reconnect" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_main_actions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="40.dp"
            android:layout_height="40.dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/floating_menu_back"
            android:padding="7dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_toolbar_back" />

        <ImageButton
            android:id="@+id/btn_home"
            android:layout_width="40.dp"
            android:layout_height="40.dp"
            android:layout_marginStart="3dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/floating_menu_home"
            android:padding="7dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_toolbar_home" />

        <ImageButton
            android:id="@+id/btn_recent"
            android:layout_width="40.dp"
            android:layout_height="40.dp"
            android:layout_marginStart="3dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/floating_menu_recents"
            android:padding="7dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_toolbar_switch" />

        <ImageButton
            android:id="@+id/btn_lock_screen"
            android:layout_width="40.dp"
            android:layout_height="40.dp"
            android:layout_marginStart="3dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/floating_menu_lock_screen"
            android:padding="7dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_toolbar_lock" />

        <ImageButton
            android:id="@+id/btn_keyboard"
            android:layout_width="40.dp"
            android:layout_height="40.dp"
            android:layout_marginStart="3dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/floating_menu_keyboard"
            android:padding="7dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_toolbar_keyboard" />

        <ImageButton
            android:id="@+id/btn_menu"
            android:layout_width="40.dp"
            android:layout_height="40.dp"
            android:layout_marginStart="3dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/floating_menu_options"
            android:padding="7dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_toolbar_more" />

        <ImageButton
            android:id="@+id/btn_close"
            android:layout_width="40.dp"
            android:layout_height="40.dp"
            android:layout_marginStart="3dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/floating_menu_disconnect"
            android:padding="7dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_toolbar_close" />
    </LinearLayout>

</LinearLayout>
